Driver relationship is broken in linked scenes, when override is done in wrong order #99261

Closed
opened 2022-06-29 10:02:37 +02:00 by Matthias · 15 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
Worked: ?

Short description of error
Shape key driving another shape key gets broken in linked scenes when making library override in the wrong order.

Exact steps for others to reproduce the error
2.blend
1.blend
Open file 2.blend and tweak shape key value

Or from scratch:

  • Create Cube (cube01) with shape key.

  • Duplicate Cube (cube02)

  • Set shape key of first cube to be the driver of shape key of second cube.

  • Pack into new collection.

  • Save scene.

  • Create new file and scene.

  • Link collection with cubes to new scene.

  • Override Collection.

  • Override object data of cube01.

  • Override object data of cube02.

  • Driver relationship is broken. Works if override is done in opposite order.

Maybe this happens for other Driver relationships also. Just tested it with shape keys.

My problem is, that I already did a bunch of editing in my scene with a linked character and just now found out about this, so it's not possible for me to reset the overrides and redo them in the order that works.
There should be a way to fix this, other than having to reset the overrides.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` Worked: ? **Short description of error** Shape key driving another shape key gets broken in linked scenes when making library override in the wrong order. **Exact steps for others to reproduce the error** [2.blend](https://archive.blender.org/developer/F13258709/2.blend) [1.blend](https://archive.blender.org/developer/F13258710/1.blend) Open file 2.blend and tweak shape key value Or from scratch: - Create Cube (cube01) with shape key. - Duplicate Cube (cube02) - Set shape key of first cube to be the driver of shape key of second cube. - Pack into new collection. - Save scene. - Create new file and scene. - Link collection with cubes to new scene. - Override Collection. - Override object data of cube01. - Override object data of cube02. - > Driver relationship is broken. Works if override is done in opposite order. Maybe this happens for other Driver relationships also. Just tested it with shape keys. My problem is, that I already did a bunch of editing in my scene with a linked character and just now found out about this, so it's not possible for me to reset the overrides and redo them in the order that works. There should be a way to fix this, other than having to reset the overrides.
Author

Added subscriber: @Mots

Added subscriber: @Mots
Author

Also, the same thing happens when trying to do the driver relationship inside the scene that contains the linked cubes, except then the override order doesn't matter.
This works as long as working with the scene, but upon reopening/reverting, the relationship doesn't work anymore.

Also, the same thing happens when trying to do the driver relationship inside the scene that contains the linked cubes, except then the override order doesn't matter. This works as long as working with the scene, but upon reopening/reverting, the relationship doesn't work anymore.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'

As explained in the documentation, when doing single overrides that way, you indeed need to manually fix relationships between data-blocks, there is no way for Blender to know/guess which ID pointer should be remapped where, etc.

This why the 'override hierarchy' should be the preferred way to use to create overrides.

Note that the 'create single override' option is likely to disappear entirely from the UI in Blender 3.3, since it's a fairly advanced option requiring a lot of manual work, and its practical usage is close to null.

As explained in [the documentation](https://docs.blender.org/manual/en/3.2/files/linked_libraries/library_overrides.html), when doing single overrides that way, you indeed need to manually fix relationships between data-blocks, there is no way for Blender to know/guess which ID pointer should be remapped where, etc. This why the 'override hierarchy' should be the preferred way to use to create overrides. Note that the 'create single override' option is likely to disappear entirely from the UI in Blender 3.3, since it's a fairly advanced option requiring a lot of manual work, and its practical usage is close to null.
Author

Well, there's just a little problem.
I'm talking about Object Data Overrrides, which aren't automatically overridden, when making the initial override.
I have to override the object data of each object one after the other, doesn't matter if I use the override single or hierarchy.

blender_ObjectDataOverride_01.PNG

Well, there's just a little problem. I'm talking about Object Data Overrrides, which aren't automatically overridden, when making the initial override. I have to override the object data of each object one after the other, doesn't matter if I use the override single or hierarchy. ![blender_ObjectDataOverride_01.PNG](https://archive.blender.org/developer/F13285378/blender_ObjectDataOverride_01.PNG)

I believe that kind of issue is not showing anymore in more recent versions of Blender (3.2/future 3.3)? as long as you always use the 'hierarchy' version of the override operation of course.

I believe that kind of issue is not showing anymore in more recent versions of Blender (3.2/future 3.3)? as long as you always use the 'hierarchy' version of the override operation of course.
Author

Just tried the latest alpha, same behavior.

So let me explain my exact steps:

I import my collection
Select Collection
Object>Relations>Make Library Override

  • every OBJECT (container) gets a library override (link symbol with arrow)

to override OBJECT DATA, I have to expand every OBJECT (container), select the OBJECT DATA, and override it.

There is no option to override the hierarchy above my meshes (container objects), because they already have the override status (link symbol with arrow). Not in the right click menu, nor in the Object>Relations Menu (there it's greyed out).

Just tried the latest alpha, same behavior. So let me explain my exact steps: I import my collection Select Collection Object>Relations>Make Library Override - > every OBJECT (container) gets a library override (link symbol with arrow) to override OBJECT DATA, I have to expand every OBJECT (container), select the OBJECT DATA, and override it. There is no option to override the hierarchy above my meshes (container objects), because they already have the override status (link symbol with arrow). Not in the right click menu, nor in the Object>Relations Menu (there it's greyed out).
Author

Here are some screenshots to better explain:

blender_ObjectDataOverride_03.PNG

blender_ObjectDataOverride_04.PNG

blender_ObjectDataOverride_02.PNG

Here are some screenshots to better explain: ![blender_ObjectDataOverride_03.PNG](https://archive.blender.org/developer/F13286077/blender_ObjectDataOverride_03.PNG) ![blender_ObjectDataOverride_04.PNG](https://archive.blender.org/developer/F13286076/blender_ObjectDataOverride_04.PNG) ![blender_ObjectDataOverride_02.PNG](https://archive.blender.org/developer/F13286075/blender_ObjectDataOverride_02.PNG)

Changed status from 'Archived' to: 'Confirmed'

Changed status from 'Archived' to: 'Confirmed'

Aaaaah OK now I see what you mean, thanks! Yes this is a fairly intricate issue, will see how to fix it.

Aaaaah OK now I see what you mean, thanks! Yes this is a fairly intricate issue, will see how to fix it.
Author

Thank you, much appreciated!

Thank you, much appreciated!

This issue was referenced by 57097e9a85

This issue was referenced by 57097e9a8515048b580459354fa197f78a442409

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-07-12 14:47:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99261
No description provided.