Fix T99261: partial LibOverride creation would not properly remap all needed data.

When creating partial overrides, there may also be need to reamap usage
of linked data towards already existing overrides, in newly created
overrides.